made header fixed
* pages should use the headerMargin CSS property for avoiding header overlapping with main content

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,14 @@ a {
   text-decoration: none;
 }
 
+:root {
+  --header-height: 117px;
+}
+
+.headerMargin {
+  padding-top: var(--header-height);
+}
+
 .layoutSpacing {
   max-width: calc(1440px - 2 * 123px);
   width: 100%;
